# epee_serde

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: de.rs  error.rs  lib.rs  marker.rs  read_ext.rs  ser.rs  varint.rs
src/value/: de.rs  mod.rs
tests/p2p/: handshake.rs
